--- a/style.css
+++ b/style.css
@@ -1,115 +1,145 @@
+/* Grundlayout */
 body, html {
-    background-image: url("img/Background-img.jpg");
-    background-position: center;    
+  background-image: url("img/Background-img.jpg");
+  background-position: center;
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
+
+/* Header */
 .header {
-    width: 320px;
-    height: auto;
-    padding-top: 30px;
-    padding-left: 30px;
-    padding-bottom: 50px;
+  width: 320px;
+  height: auto;
+  padding-top: 30px;
+  padding-left: 30px;
+  padding-bottom: 50px;
 }
+
+/* Hilfsklasse: ausblenden */
 .d_none {
-    display: none;
+  display: none;
 }
-.smallImg {
-    display: flex;
-    margin: 32px;
-    cursor: pointer;
-    transition: 300ms ease-in-out;
-    border-radius: 12px;   
-}
-.smallImg img {
-    width: 250px;
-    height: 250px;
-    border-radius: 12px;   
-}
-.smallImg:hover {
-    transform: scale(1.2);
-    box-shadow: 2px 2px 30px rgb(239, 243, 245);
-}
+
+/* Galerie-Grid */
 #allImgs {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    padding-top: 30px; 
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding-top: 30px;
 }
+
+/* Thumbnail */
+.smallImg {
+  display: flex;
+  margin: 32px;
+  cursor: pointer;
+  transition: 300ms ease-in-out;
+  border-radius: 12px;
+}
+
+.smallImg img {
+  width: 250px;
+  height: 250px;
+  border-radius: 12px;
+}
+
+.smallImg:hover {
+  transform: scale(1.2);
+  box-shadow: 2px 2px 30px rgb(239, 243, 245);
+}
+
+/* Overlay Container */
+#overlay {
+  position: fixed;
+  inset: 0;
+}
+
+/* Overlay-Inhalt */
 .imagesRender {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(22, 41, 24, 0.853);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    cursor: pointer;
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(22, 41, 24, 0.853);
+  cursor: pointer;
 }
+
+/* Modal-Box */
+.imageBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 26px;
+  color: rgb(163, 225, 184);
+  cursor: default;
+}
+
+.imageBox img {
+  border-radius: 12px;
+  max-height: 350px;
+  max-width: 90%;
+}
+
+/* Buttons */
 .imagesRender button {
-    height: 60px;
-    width: 80px;
-    background-color: transparent;
-    border: none;   
+  height: 60px;
+  width: 80px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
+
 .imagesRender button:hover {
-    transform: scale(1.2);
-    transition: 300ms ease-in-out;
-    cursor: pointer;  
+  transform: scale(1.2);
+  transition: 300ms ease-in-out;
 }
-.imageBox {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 26px;
-    color: rgb(163, 225, 184);    
+
+/* Footer */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
 }
-#content img {
-    border-radius: 12px;
-    max-height: 350px;
-    max-width: 90%;   
+
+.footer img {
+  width: 50px;   
+  height: auto;
 }
-.footer-img{ 
-    width: 80px;
-    height: 80px;
-    padding-left: 50px;
-    padding-top: 50px;
-    padding-bottom: 30px;    
-}
+
+
+/* Responsive */
 @media (max-width: 700px) {
-    #content img {
-    border-radius: 12px;
+  .imageBox img {
     max-height: 250px;
-    max-width: 80%;    
+    max-width: 80%;
+  }
 }
-}
+
 @media (max-width: 450px) {
-    .header {
-    width: 250px;    
-}
-.footer-img{ 
+  .header {
+    width: 250px;
+  }
+
+  .footer-img {
     width: 50px;
-    height: 50px;   
-}
-.imageBox {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    height: 50px;
+  }
+
+  .imageBox {
     font-size: 18px;
-    color: rgb(163, 225, 184);  
-}
-.imagesRender button {
+  }
+
+  .imagesRender button {
     height: 30px;
     width: 60px;
-    background-color: transparent;
-    border: none;    
-}
-#content img {
-    border-radius: 12px;
+  }
+
+  .imageBox img {
     max-height: 250px;
-    max-width: 70%;  
-}
+    max-width: 70%;
+  }
 }
